# VZOpenGL

./: CMakeLists.txt  CMakePresets.json
include/: Camera.h  Light.h  Mesh.h  Model.h  Renderer.h  Shader.h  Shadow.h
src/: CMakeLists.txt  Camera.cpp  Light.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Shadow.cpp  main.cpp
src/shaders/: DepthShader.fs  PhongShader.fs  PhongShader.vs  PointDepthShader.gs
